--- a/src/css/home.css
+++ b/src/css/home.css
@@ -77,3 +77,11 @@
 .viewSite:hover{
   text-decoration: underline;
 }
+
+
+@media only screen and (max-width: 730px){
+
+  .sectionTitle{
+    margin-left:10px;
+  }
+}
