--- a/src/css/introSection.css
+++ b/src/css/introSection.css
@@ -4,6 +4,14 @@
 }
 .header{
   margin: 110px 0 20px 0;
-  padding: 0 5px;
 }
 
+
+@media only screen and (max-width: 730px){
+  .headerTitle{
+    margin: 0 10px;
+  }
+  .headerBody{
+    margin: 0 10px;
+  }
+}
