--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -15,7 +15,7 @@
 
 .attributes{
     font-size: 14px;
-    color:#aaa;
+    color:#999;
     margin-top:30px;
 }
 
@@ -23,6 +23,6 @@
   border-top:1px solid #aaa;
   padding-top:20px;
   font-size: 14px;
-  color:#aaa;
+  color:#999;
   text-align:left ;
 }
