--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,7 +1,8 @@
 .about{
     display: flex;
     flex-wrap: wrap;
-    margin:20px 0 70px 0;
+    margin:20px 0 0 0;
+    line-height: 30px;
 }
 
 .aboutPage{
